--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #501414;
   color: white;
   display: flex;
   height: 55px;
@@ -21,4 +21,8 @@
   justify-content: space-between;
   border: 1px solid #ccc;
   padding: 10px;
+}
+
+.ReactTabs__TabPanel--selected {
+  background-color: lightgray;
 }
